<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--Iconos y opciones del menu desplegable-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:src="@mipmap/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@mipmap/ic_folder"
            android:title="@string/trabajos" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_friends"
            android:title="@string/amigos" />
        <item
            android:id="@+id/nav_location"
            android:icon="@mipmap/ic_location"
            android:title="@string/ubicaciones" />
        <item
            android:id="@+id/nav_document"
            android:icon="@mipmap/ic_document"
            android:title="@string/informes" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
